# aws-infrastructure-manager

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.kiro/specs/aws-infrastructure-manager/: design.md  requirements.md  tasks.md
config/: aws_mcp_config.py  environments.py  logging.py  settings.py
docs/: aws_mcp_client.md
examples/: approval_workflow_demo.py  aws_mcp_client_example.py  change_plan_engine_demo.py  dashboard_api_example.py  infrastructure_service_demo.py  plans_api_example.py  s3_state_management_demo.py
localstack/: init-aws-resources.sh
monitoring/prometheus/: prometheus.yml
scripts/: deploy.sh  generate_env_config.py
src/: __init__.py  app.py  main.py
src/api/: __init__.py  auth.py  dashboard.py  decorators.py  dependencies.py  plans.py  projects.py  resources.py  views.py
src/models/: __init__.py  data_models.py  enums.py  exceptions.py
src/services/: __init__.py  approval_workflow.py  auth_service.py  aws_mcp_client.py  change_plan_engine.py  infrastructure_service.py  interfaces.py  project_management.py  s3_state_management.py  service_container.py  view_service.py
src/utils/: powertools.py
tests/: end_to_end_test_api.py  end_to_end_test_dashboard.py  end_to_end_test_workflow.py  integration_test_aws_mcp_client.py  integration_test_project_isolation.py  integration_test_s3_state_management.py  test_approval_workflow.py  test_auth_service.py  test_aws_mcp_client.py  test_change_plan_engine.py  test_dashboard_api.py  test_infrastructure_service.py  test_plans_api.py  test_project_management.py  test_s3_state_management.py  test_s3_state_management_simple.py  test_service_container.py  test_view_service.py
